src/test/test-models/bad/for_loops/for_statements_bad_indices2.stan
functions {
  int foo(int a) {
    while (1) {
      int vs[2,3];
      for (v in vs) v = 3;
    }
    return 0;
  }
}
parameters {
  real y;
}
model {
  y ~ normal(0,1);
}

